# koodipahkina2025

./: README.md
botti/: README.md  botti.cabal  stack.yaml
botti/src/: GameTypes.hs  HttpRequest.hs  Main.hs  Strategy.hs
